--- a/Enterprise.Web/Enterprise.Web.csproj
+++ b/Enterprise.Web/Enterprise.Web.csproj
@@ -266,7 +266,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.WebPages" Version="3.2.7" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0-preview9.19424.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0-rc1.19457.4" />
     <PackageReference Include="NPOI" Version="2.4.1" />
   </ItemGroup>
 
