--- a/Linkup.Common/Linkup.Common.csproj
+++ b/Linkup.Common/Linkup.Common.csproj
@@ -1,9 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <ProjectGuid>{79D0347A-7F1D-4AF4-B013-3B6FA12E066C}</ProjectGuid>
-    <RootNamespace>Linkup.Common</RootNamespace>
-    <AssemblyName>Linkup.Common</AssemblyName>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.1;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="EnterpriseLibrary.Common.NetCore" Version="6.1.15-rc" />
@@ -13,6 +10,6 @@
     <PackageReference Include="EnterpriseLibrary.Logging.Database.NetCore" Version="6.1.7-rc" />
     <PackageReference Include="EnterpriseLibrary.Logging.NetCore" Version="6.1.7-rc" />
     <PackageReference Include="Gma.QrCodeNet.Encoding" Version="2.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 </Project>
