--- a/Sheng.Enterprise.Core/Sheng.Enterprise.Core.csproj
+++ b/Sheng.Enterprise.Core/Sheng.Enterprise.Core.csproj
@@ -1,9 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <ProjectGuid>{405C21F4-E46A-4FCA-A8FE-BDEF9EC130B8}</ProjectGuid>
-    <RootNamespace>Sheng.Enterprise.Core</RootNamespace>
-    <AssemblyName>Sheng.Enterprise.Core</AssemblyName>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.1;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Sheng.Enterprise.Infrastructure\Sheng.Enterprise.Infrastructure.csproj" />
