--- a/Enterprise.Web/Properties/launchSettings.json
+++ b/Enterprise.Web/Properties/launchSettings.json
@@ -18,7 +18,7 @@
     "Enterprise.Web": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "http://localhost:5000;http://0.0.0.0:5000;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
