--- a/Enterprise.Web/appsettings.Development.json
+++ b/Enterprise.Web/appsettings.Development.json
@@ -6,7 +6,11 @@
       "Microsoft": "Information"
     }
   },
-  "configuration": {
-
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://*:5000"
+      }
+    }
   }
 }
